# Orbit

./: .gitignore  Dockerfile.bench  Dockerfile.monitor  Dockerfile.replica  Dockerfile.router  README.md  docker-compose.yml  plan.md  pyproject.toml
configs/: bench_agentic.yaml  bench_chat.yaml  bench_mixed.yaml  bench_rag.yaml  default.yaml
orbit/bench/: analysis.py  baselines.py  runner.py  workloads.py
orbit/common/: config.py  hashing.py  schemas.py
orbit/monitor/: app.py  collector.py
orbit/replica/: app.py  backend_interface.py  kv_cache.py  llamacpp_backend.py  sim_backend.py
orbit/router/: app.py  cache_registry.py  load_tracker.py  prefix_trie.py  prompt_analyzer.py  routing_engine.py  scorer.py  semantic_index.py
requirements/: base.txt  bench.txt  router.txt
scripts/: run_benchmark.sh  run_benchmark_local.sh  start_local.sh
tests/: test_hashing.py  test_integration.py  test_prefix_trie.py  test_routing_engine.py  test_scorer.py  test_sim_backend.py
