[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit"
version = "0.1.0"
description = "Semantic-aware KV-cache affinity routing layer for LLM serving"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
router = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
bench = [
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["orbit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
